force-app/src/objects/c2g__codaCurrencyRevaluationGLAItem__c.object
<CustomObject>
    <description>The GLA list for a currency revaluation.</description>
    <fields>
        <fullName>c2g__CurrencyRevaluation__c</fullName>
        <description>Parent currency revaluation.</description>
        <label>Currency Revaluation</label>
        <referenceTo>c2g__codaCurrencyRevaluation__c</referenceTo>
        <relationshipName>CurrencyRevaluationGLAItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <description>Parent General Ledger Account.</description>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Currency Revaluation GLA Items</relationshipLabel>
        <relationshipName>CurrencyRevaluationGLAItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Currency Revaluation GLA Items</relationshipLabel>
        <relationshipName>CurrencyRevaluationGLAItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>UnitOfWork</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Currency Revaluation GLA Item</label>
    <nameField>
        <displayFormat>CRG{000000000}</displayFormat>
        <label>CurrencyRevaluationGLAItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Currency Revaluation GLA Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>